--- a/templates/video.html
+++ b/templates/video.html
@@ -1067,22 +1067,35 @@ body .markdown-body
 .highlight .vi{color:teal}
 .highlight .il{color:#009999}
 .highlight .gc{color:#999;background-color:#EAF2F5}
-</style><title>index</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong>Not 8X</strong><h5>{{ word }}</h5><a class="headerlink" href="#not-8x" title="Permanent link"></a></h1>
+</style><title>Not 8X │ {{ data['name'] }}</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong><a href="/">Not 8X</a></strong><h5>{{ word }}</h5><a class="headerlink" href="#not-8x" title="Permanent link"></a></h1>
 <blockquote>
 <p>正所谓小lu<strong>怡情</strong>, 大lu<strong>伤身</strong>…🙏</p>
 </blockquote>
 <hr>
-<video src="{{ data['download'] }}" controls="controls" poster="{{ data['background'] }}" width="100%">
-看起来你的浏览器不支持播放视频...
-</video>
-<br><br>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.css">
+</head>
+<body>
+  <div id="dplayer"></div>
+  <script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
+  <script>
+    const dp = new DPlayer({
+      container: document.getElementById('dplayer'),
+      video: {
+        url: '{{ data['download'] }}',
+        pic: '{{ data['background'] }}',
+        preload: 'metamata'
+      }
+    });
+    dp.play();
+  </script>
+<br>
 <blockquote>
 <p><strong>{{ data['name'] }}</strong></p>
 <blockquote>
 <p><strong>ID: <em>{{ vid }}</em></strong></p>
 </blockquote>
 </blockquote>
-<center><a href="/like/{{ vid }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">❤️</button></a></center>
+<center><a href="/like/{{ vid }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">❤️</button></a>  │ <a href="{{ data['download'] }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">📥</button></a> │ <a href="/hate/{{ vid }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">💩</button></a></center>
 </article><script async="">
 document.write(
   '<script src="http://' +
