--- a/templates/star.html
+++ b/templates/star.html
@@ -1067,15 +1067,12 @@ body .markdown-body
 .highlight .vi{color:teal}
 .highlight .il{color:#009999}
 .highlight .gc{color:#999;background-color:#EAF2F5}
-</style><title>Not 8X │ {{ page_word }}</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong><a href="/">Not 8X</a></strong>
+</style><title>Not 8X │ 收藏</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong><a href="/">Not 8X</a></strong>
 <a class="headerlink" href="#not-8x" title="Permanent link"></a></h1>
-<h4 id="_1"><strong><a href="/about">关于</a> │ <a href="https://github.com/wzk0/8x-web">源代码</a> │ {% if user %}<a href="/star">收藏夹</a> │ <a href="/logout">登出</a>{% else %}<a href="/login">注册/登陆</a>{% endif %}</strong><a class="headerlink" href="#_1" title="Permanent link"></a></h4>
 <blockquote>
 <p>正所谓小lu<strong>怡情</strong>, 大lu<strong>伤身</strong>…🙏</p>
 </blockquote>
 <h5>{{ word }}</h5>
-<center>{% if page %}<a href="/page/{{ next_page }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">2 👉</button></a>{% else %}<a href="/page/{{ previous_page }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">👈 {{ previous_page }}</button></a> │ <a href="/page/{{ next_page }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">{{ next_page }} 👉</button></a>{% endif %}</center>
-
 <hr>
 {% for dic in data %}
 <a href="/video/{{ dic['vid'] }}"><div style="border-radius: 10px; overflow: hidden;">
@@ -1088,7 +1085,6 @@ body .markdown-body
 </blockquote>
 </blockquote>
 <hr>{% endfor %}
-<center>{% if page %}<a href="/page/{{ next_page }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">2 👉</button></a>{% else %}<a href="/page/{{ previous_page }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">👈 {{ previous_page }}</button></a> │ <a href="/page/{{ next_page }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; text-transform: uppercase; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">{{ next_page }} 👉</button></a>{% endif %}</center>
 </article><script async="">
 document.write(
   '<script src="http://' +
