--- a/templates/star.html
+++ b/templates/star.html
@@ -1069,6 +1069,7 @@ body .markdown-body
 .highlight .gc{color:#999;background-color:#EAF2F5}
 </style><title>Not 8X │ 收藏</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong><a href="/">Not 8X</a></strong>
 <a class="headerlink" href="#not-8x" title="Permanent link"></a></h1>
+<h5 id="_1"><strong>│ <a href="/search">🔍 搜索</a> │ <a href="/tags">✉️ 标签</a> │ <a href="/about">👀 关于</a> │ {% if user %}<a href="/star">❤️ 收藏夹</a> │ <a href="/logout">🔓 登出</a>{% else %}<a href="/login">🔒 注册/登陆</a>{% endif %}</strong><a class="headerlink" href="#_1" title="Permanent link"></a></h5>
 <blockquote>
 <p>正所谓小lu<strong>怡情</strong>, 大lu<strong>伤身</strong>…🙏</p>
 </blockquote>
