--- a/templates/video.html
+++ b/templates/video.html
@@ -1067,11 +1067,12 @@ body .markdown-body
 .highlight .vi{color:teal}
 .highlight .il{color:#009999}
 .highlight .gc{color:#999;background-color:#EAF2F5}
-</style><title>Not 8X │ {{ data['name'] }}</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong><a href="/">Not 8X</a></strong><h5>{{ word }}</h5><a class="headerlink" href="#not-8x" title="Permanent link"></a></h1>
-<h4 id="_1"><strong><a href="/about">关于</a> │ <a href="https://github.com/wzk0/8x-web">源代码</a> │ {% if user %}<a href="/star">收藏夹</a> │ <a href="/logout">登出</a>{% else %}<a href="/login">注册/登陆</a>{% endif %}</strong><a class="headerlink" href="#_1" title="Permanent link"></a></h4>
+</style><title>Not 8X │ {{ data['name'] }}</title></head><body><article class="markdown-body"><h1 id="not-8x"><strong><a href="/">Not 8X</a></strong><a class="headerlink" href="#not-8x" title="Permanent link"></a></h1>
+<h5 id="_1"><strong>│ <a href="/search">🔍 搜索</a> │ <a href="/tags">✉️ 标签</a> │ <a href="/about">👀 关于</a> │ {% if user %}<a href="/star">❤️ 收藏夹</a> │ <a href="/logout">🔓 登出</a>{% else %}<a href="/login">🔒 注册/登陆</a>{% endif %}</strong><a class="headerlink" href="#_1" title="Permanent link"></a></h5>
 <blockquote>
 <p>正所谓小lu<strong>怡情</strong>, 大lu<strong>伤身</strong>…🙏</p>
 </blockquote>
+<h5>{{ word }}</h5>
 <hr>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.css">
 </head>
@@ -1094,6 +1095,7 @@ body .markdown-body
 <p><strong>{{ data['name'] }}</strong></p>
 <blockquote>
 <p><strong>ID: <em>{{ vid }}</em></strong></p>
+<p><strong>标签: <em><a href="/tags/{{ data['name'].split('-')[-1]|lower }}/page/1">{{ data['name'].split('-')[-1] }}</a></em></strong></p>
 </blockquote>
 </blockquote>
 <center><a href="/like/{{ vid }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">❤️</button></a>  │ <a href="{{ data['download'] }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">📥</button></a> │ <a href="/hate/{{ vid }}"><button style="background-color: #fff; border: 1px solid #ccc; border-radius: 10px; color: #333; cursor: pointer; font-size: 16px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='#ccc'; this.style.color='#fff';" onmouseout="this.style.backgroundColor='#fff'; this.style.color='#333';">💩</button></a></center>
